<resources>
    <string name="app_name">libraries.io</string>
    <string name="loading">Loading...</string>
    <string name="refreshing">Refreshing</string>
    <string name="bio">Bio</string>
    <string name="company">Company</string>
    <string name="git_details">GitHub Details</string>
    <string name="repos">Repos</string>
    <string name="gists">Gists</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>

    <!-- Home Menu title -->
    <string name="search">Search</string>
    <string name="about">About</string>
</resources>
