<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dev.rahul.librariesio.ui.about.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/includeLoading"
            layout="@layout/include_loading_view"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorCard"
            android:layout_margin="@dimen/common_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/common_padding">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="@dimen/profile_image_size"
                    android:layout_height="@dimen/profile_image_size"
                    app:civ_border_color="@color/colorAccent"
                    app:civ_border_width="@dimen/profile_image_border_width"
                    android:layout_margin="@dimen/profile_image_margin"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/github_sociocon"/>

                <com.dev.rahul.librariesio.utility.widgets.text_view.RegularTextView
                    android:id="@+id/tvGitUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="dummy"
                    android:textSize="@dimen/git_id_text_size"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/text_margin_top_bottom"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="Rahul Prasad"
                    android:textSize="@dimen/profile_name_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/text_margin_top_bottom"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bio"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/white"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvBio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bio"
                    android:fontFamily="cursive"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginBottom="@dimen/text_margin_top_bottom"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorCard"
            android:layout_marginLeft="@dimen/common_padding"
            android:layout_marginRight="@dimen/common_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/common_padding">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company"
                    android:textColor="@color/colorAccent"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvCompany"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/profile_name_size"
                    android:text="@string/company"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_padding"
            app:cardBackgroundColor="@color/colorCard">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                android:padding="@dimen/common_padding">

                <TableRow>
                    <android.support.v7.widget.AppCompatTextView
                        android:text="@string/git_details"
                        android:textColor="@color/colorAccent"
                        android:layout_span="4"
                        android:layout_marginBottom="@dimen/text_margin_top_bottom"/>
                </TableRow>

                <TableRow
                    android:background="@color/colorBackground"
                    android:padding="@dimen/tab_row_padding">
                    <android.support.v7.widget.AppCompatTextView
                        android:text="@string/repos"
                        android:gravity="center"
                        android:textColor="@color/colorAccent"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:text="@string/gists"
                        android:gravity="center"
                        android:textColor="@color/colorAccent"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:text="@string/followers"
                        android:gravity="center"
                        android:textColor="@color/colorAccent"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:text="@string/followings"
                        android:gravity="center"
                        android:textColor="@color/colorAccent"/>
                </TableRow>

                <TableRow
                    android:padding="@dimen/tab_row_padding"
                    android:background="@color/colorSplashPrimaryDark">
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvRepos"
                        android:text="0"
                        android:gravity="center"
                        android:textColor="@android:color/white"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvGists"
                        android:text="0"
                        android:gravity="center"
                        android:textColor="@android:color/white"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvFollowers"
                        android:text="0"
                        android:gravity="center"
                        android:textColor="@android:color/white"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tvFollowings"
                        android:text="0"
                        android:gravity="center"
                        android:textColor="@android:color/white"/>
                </TableRow>
            </TableLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
